color guessing game complete

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
                 START GAME
             </button>
         </div>
+        <!-- Copyright -->
+        <div class="copyright">© 2025 Margaret Okpani</div>
         <!-- Game Container (Initially Hidden) -->
         <div class="game-container hidden">
             <div class="top-bar">
