color guessing game completed

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         <div class="welcome-screen" data-testid="welcomeScreen">
             <div class="welcome-title">Hello Human!👋</div>
             <h1 class="welcome-heading">Welcome to the Color Guessing Game!</h1>
-            <p class="instructions">Can you guess the correct color? Here's how to play:</p>
+            <p class="instructions">Can you select the correct color? Here's how to play:</p>
             <ul class="instruction-list">
                 <li>Look at the color box and try to find the matching color below</li>
                 <li>Click on the color you think matches the box</li>
-                <li>You have 3 trials to guess the correct color</li>
+                <li>You have 3 trials to select the correct color</li>
                 <li>If you're right, you'll earn a point</li>
                 <li>If you're wrong, you'll lose a trial</li>
             </ul>
@@ -61,7 +61,7 @@
                     <i class="fas fa-times"></i>
                 </div>
             </div>
-            <p data-testid="gameInstructions">Guess the correct color!</p>
+            <p data-testid="gameInstructions">Select the correct color!</p>
             <div class="color-options"></div>
             <p data-testid="gameStatus">Make your guess!</p>
             <button data-testid="newGameButton">New Game</button>
